terraform/modules/networking/nat_gateway.tf
resource "aws_eip" "nat_eip" {
  domain = "vpc"
  tags = { Name = "core-nat-eip" }
  depends_on = [aws_internet_gateway.core_igw]
}

resource "aws_nat_gateway" "core_nat_gateway" {
  allocation_id = aws_eip.nat_eip.id
  subnet_id = aws_subnet.public_subnet1.id
  depends_on = [aws_internet_gateway.core_igw]
    tags = {
        Name = "core-nat-gateway"
    }
}
